cs1142/C/program_3/error
Draw.c: In function ‘getImageStats’:
Draw.c:60:2: error: invalid operands to binary * (have ‘int’ and ‘double *’)
  *minColor = 1;
  ^
Draw.c: In function ‘main’:
Draw.c:166:2: warning: passing argument 3 of ‘printImage’ from incompatible pointer type [enabled by default]
  printImage(width, height, image);
  ^
Draw.c:15:6: note: expected ‘int (*)[(sizetype)(height)]’ but argument is of type ‘double (*)[(sizetype)(height)]’
 void printImage(int width, int height, int image[width][height]) 
      ^
Draw.c:172:2: warning: passing argument 3 of ‘getImageStats’ from incompatible pointer type [enabled by default]
  getImageStats(width, height, image, &minColor, &maxColor, &avgColor);
  ^
Draw.c:57:6: note: expected ‘int (*)[(sizetype)(height)]’ but argument is of type ‘double (*)[(sizetype)(height)]’
 void getImageStats(int width,int height,int image[width][height],double* minColor,double* maxColor,double* avgColor) 
      ^
